# OrganSegmentation

./: .gitignore  LICENSE  README.md  cli.py  config.py  experiment_results.ods  main.py  pyproject.toml  requirements.txt  sanity.py  setup.py  test.py  testing.py  what_are_we_doing.docx
auto_vs_manual/: analysis.ipynb  autocontouring.py  label_mapping_new.py  main.py  prepare_data.py
autocontouring/: autocontouring.py
backup/: what_are_we_doing.docx
backup/experiments_bart/: .gitignore
clinical_acceptability_test/: prepare_data.py  qualitative.ipynb
data_preparation/: README.md
data_preparation/meta/: .~lock.auto_contours_review_processed.xlsx#  anal_canal.csv  auto_contours_review.xlsx  auto_contours_review_processed.xlsx  bladder.csv  bowel_bag.csv  bowel_bag_bladder_hip_rectum.csv  dataset_test_14-11-2022.csv  dataset_test_14-11-2022_deduplicated.csv  dataset_test_14-11-2022_deduplicated_annotated.csv  dataset_test_2019-12-16.csv  dataset_test_21-08-2020.csv  dataset_train.csv  dataset_train_2019-10-22_fixed.csv  (+14 more)
datasets/: spleen.py
definitions/: basic-student-folds  basic-teacher-folds  test_on_single_ct
experiments/: .env  cli.py  config.py  main.py  requirements.txt  sanity.py  setup.py  test.py
jupyter_notebooks/: analyze_results.ipynb  auto_vs_manual_test.ipynb  clinical_acceptability_test.ipynb  experiment_results.ipynb  experiment_results.xlsx  experiment_results_stats.ipynb  images_for_schematic.ipynb  random.ipynb  selection_pressure.ipynb
models/: unet.py  unet_khead.py  unet_khead_student.py
utils/: augmentation.py  loss.py  postprocessing.py  utilities.py  visualize.py
(+190 files in other folders)
