[tool.poetry]
name = "oar_segmentation"
version = "0.1.0"
description = ""
authors = ["Monika Grewal <grewal@cwi.nl>", "Dustin van Weersel <dagvw@cwi.nl>"]

[tool.poetry.dependencies]
python = "^3.8.6, <3.12"
torch = "^1.11.0"
scikit-image = "^0.19.2"
scikit-learn = "^1.1.1"
torchvision = "^0.12.0"
pydantic = "^1.9.1"
numpy = "~1.23.3"
nibabel = "^3.2.2"
toolz = "^0.11.2"
tensorboard = "^2.9.0"
protobuf = "<4.0"
python-dotenv = "^0.20.0"
opencv-python = "^4.6.0"
torch-tb-profiler = "^0.4.0"
scipy = "^1.8.1"
pydicom = "^2.3.0"
tqdm = "^4.64.1"
pandas = "^1.4.2"
openpyxl = "^3.0.10"
notebook = "^6.5.2"

[tool.poetry.group.dev.dependencies]
torchviz = "^0.0.2"
black = "^22.8.0"
mypy = "^0.971"
flake8 = "^5.0.4"

[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.16.0"
matplotlib = "^3.6.1"
openpyxl = "^3.0.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
